# learn-python

./: pyproject.toml
src/learn_python.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/learn_python/exercises/: exercise_1.py
src/learn_python/exercises/basics/: __init__.py  add_two_numbers.py  calculators.py  fibonacci.py  fizz_buzz.py  hello_world.py
src/learn_python/framework/: __init__.py  _capture.py  _exercise.py  _formatter.py  _ipython.py  _queue.py
src/learn_python/solutions/: exercise_1.py
tests/exercises/: test_all_exercises.py
tests/framework/: test_capture.py  test_exercise_register_solution.py  test_exercise_score.py  test_fixtures.py  test_formatter.py  test_parametrization.py  test_queue.py  test_registration.py  test_solution_injection.py  test_test_execution.py
